objects/Service_Team_Member__c.object
<CustomObject>
    <description>This object will be used to add analysts (users) and other Genesys Employees (contacts) to a case Service Team. The object will prevent portal users or designated contacts from being added to the case team.</description>
    <fields>
        <fullName>Case__c</fullName>
        <description>This field will track the case to which this team is associated with.</description>
        <inlineHelpText>This field will track the case to which this team is associated with.</inlineHelpText>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Service Team Members</relationshipLabel>
        <relationshipName>Service_Team_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Genesys_User__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Genesys_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will enable customer care to add a Salesforce user to the case service team.</description>
        <inlineHelpText>This field will enable customer care to add a Salesforce user to the case service team.</inlineHelpText>
        <label>Genesys User</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserType</field>
                <operation>equals</operation>
                <value>Standard</value>
            </filterItems>
            <infoMessage>Please select a Genesys employee with a Salesforce License.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Service_Team_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Service Team Member</label>
    <nameField>
        <displayFormat>STM-{00000000}</displayFormat>
        <label>Service Team Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>